gccida/c2/gen_mem_addressof
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_mem_addressof/src/function.c:3385:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_mem_addressof/src/function.c:3394:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_mem_addressof/src/function.c:3401:21: error: use of undeclared identifier 'machine_mode'
v4 = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)reg + 2)); 
                    ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_mem_addressof/src/obj/function.o] Error 1
